# bw_tt

./: docker-compose.yml  pyproject.toml
api/user/v1/: user.py
app/: server.py
app/user/models/: user.py
app/user/schemas/: user.py
app/user/services/: user.py
celery_task/tasks/: __init__.py  user.py
core/: config.py
core/db/: session.py
core/exceptions/: __init__.py  user.py
docker/api/: Dockerfile
docker/db/: Dockerfile
docker/redis/: Dockerfile
migrations/versions/: 005ce6e94401_create_user_table.py
