[tool.poetry]
name = "quotfin"
version = "0.1.0"
description = ""
authors = ["q0tik <maksim.topchilo@quot.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
alembic = "^1.8.0"
pika = "^1.2.1"
aio-pika = "^8.0.3"
asyncpg = "^0.25.0"
celery = "4.3.0"
redis = "^4.3.3"
dramatiq = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
